<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Call411</string>
    <string name="action_settings">Settings</string>
    <string name="detail_ram">RAM</string>
    <string name="detail_processor">Processor</string>
    <string name="detail_manufacturer">Manufacturer</string>
    <string name="detail_system">Operating system</string>
    <string name="detail_screen_size">Screen size</string>
    <string name="detail_screen_resolution">Screen resolution</string>
    <string name="detail_battery_capacity">Battery capacity</string>
    <string name="detail_talk_time">Talk time</string>
    <string name="detail_camera_megapixels">Camera megapixels</string>
    <string name="detail_price">Price</string>
    <string name="detail_weight">Weight</string>
    <string name="detail_storage_options">Storage options</string>
    <string name="detail_dimensions">Dimensions</string>
    <string name="detail_carrier">Carrier</string>
    <string name="detail_network_frequencies">Network frequencies</string>
</resources>
