<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:io="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.androchill.call411.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/map_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </FrameLayout>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop" />

                <com.androchill.call411.ui.SpotlightView
                    android:id="@+id/spotlight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"

                    io:mask="@drawable/spot_mask"
                    io:target="@id/map_container" />

                <android.support.v7.widget.CardView
                    android:id="@+id/star"
                    style="@style/FloatingCard"
                    android:layout_gravity="bottom|start"
                    android:layout_marginLeft="@dimen/floating_button_margin"
                    android:layout_marginStart="@dimen/floating_button_margin"
                    android:visibility="invisible">

                </android.support.v7.widget.CardView>

            </FrameLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="sans-serif-light"
                android:textSize="40sp" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            
                <TableRow>
                    <TextView
                        android:text="@string/detail_manufacturer"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_manufacturer_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_system"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_system_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_processor"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_processor_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_ram"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_ram_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_screen_size"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_screen_size_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_screen_resolution"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_screen_resolution_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_camera_megapixels"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_camera_megapixels_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_battery_capacity"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_battery_capacity_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_talk_time"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_talk_time_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_dimensions"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_dimensions_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_weight"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_weight_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_storage_options"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_storage_options_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_price"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_price_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_carrier"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_carrier_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/detail_network_frequencies"
                        android:padding="6dip" />
                    <TextView
                        android:id="@+id/detail_network_frequencies_text"
                        android:gravity="end"
                        android:padding="6dip" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <com.makeramen.RoundedImageView
            android:id="@+id/animated_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:tint="@color/photo_tint"

            io:riv_corner_radius="@dimen/card_corner_radius"/>

    </FrameLayout>

</ScrollView>
